fix overflow issue, format again

--- a/client/src/routes/Workspace.css
+++ b/client/src/routes/Workspace.css
@@ -2,7 +2,6 @@
 
 html,
 body {
-  overflow-x: hidden;
   height: 100%;
   width: 100%;
 }
@@ -12,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100vh;
+  height: 95vh;
   background-color: #121212;
   color: white;
   box-sizing: border-box;
